--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<h1>yavas yavas hallediyorum</h1>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <title>Ankeb7t | Sistem</title>
+    <style>
+        /* Burası sitenin stil (CSS) kısmıdır */
+        body {
+            background-color: #0a0a0a; /* Siyah arka plan */
+            color: #00FF41; /* Hacker yeşili yazı */
+            font-family: 'Courier New', Courier, monospace;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .terminal {
+            border: 2px solid #00FF41;
+            padding: 20px;
+            width: 80%;
+            max-width: 600px;
+            box-shadow: 0 0 15px #00FF41;
+        }
+        .line {
+            margin-bottom: 10px;
+            border-right: 2px solid #00FF41;
+            white-space: nowrap;
+            overflow: hidden;
+            animation: typing 3s steps(30, end), blink 0.5s step-end infinite;
+        }
+        @keyframes typing { from { width: 0 } to { width: 100% } }
+        @keyframes blink { from, to { border-color: transparent } 50% { border-color: #00FF41 } }
+    </style>
+</head>
+<body>
+
+    <div class="terminal">
+        <div class="line">> Initializing ANKEB7T core...</div>
+        <div class="line">> System status: ONLINE</div>
+        <div class="line">> Welcome to my world.</div>
+        <br>
+        <p style="color: white;">[ Komut bekleniyor... ]</p>
+    </div>
+
+</body>
+</html>
+
