--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <canvas id="matrix"></canvas>
 
     <div class="terminal">
-        <div class="line">> Initializing ANKEB7T core...</div>
-        <div class="line">> Watcher linked.</div>
-        <div class="line">> Dünyama hosgeldin.</div>
+        <div class="line">> ANKEB7T core...</div>
+        <div class="line">> https://t.me/allesfurdie</div>
+        <div class="line">> Sanal mabedime hosgeldin.</div>
     </div>
 
     <script>
