--- a/index.html
+++ b/index.html
@@ -4,79 +4,201 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ANKB7T // DIGITAL IDENTITY</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <style>
-        body { background-color: #050000; margin: 0; overflow: hidden; font-family: 'Share Tech Mono', monospace; color: #fff; }
-        canvas { display: block; position: fixed; top: 0; left: 0; z-index: -1; filter: blur(1px); }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { 
+            background-color: #050000; 
+            font-family: 'Share Tech Mono', monospace; 
+            color: #ffffff; 
+            overflow-x: hidden;
+        }
 
-        .container {
-            position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            width: 90%; max-width: 450px; background: rgba(10, 0, 0, 0.95);
-            border: 1px solid #ff0000; box-shadow: 0 0 40px rgba(255, 0, 0, 0.2);
-            padding: 40px; text-align: center;
+        /* Matrix Arka Plan */
+        canvas {
+            display: block;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            opacity: 0.4;
+        }
+
+        /* Ana Konteynır */
+        .wrapper {
+            width: 100%;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 50px 20px;
+        }
+
+        .main-card {
+            width: 100%;
+            max-width: 800px;
+            background: rgba(15, 0, 0, 0.85);
+            border: 1px solid #ff0000;
+            box-shadow: 0 0 50px rgba(255, 0, 0, 0.15);
+            padding: 60px 40px;
+            backdrop-filter: blur(10px);
+        }
+
+        /* Profil Bölümü */
+        .profile-header {
+            text-align: center;
+            margin-bottom: 40px;
         }
 
         .profile-img {
-            width: 120px; height: 120px; border-radius: 50%;
-            border: 2px solid #ff0000; margin-bottom: 20px;
-            object-fit: cover; box-shadow: 0 0 15px #ff0000;
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 3px solid #ff0000;
+            margin-bottom: 20px;
+            box-shadow: 0 0 20px #ff0000;
+            object-fit: cover;
         }
 
-        .name { font-size: 2rem; font-weight: bold; letter-spacing: 2px; color: #ff0000; margin: 10px 0; }
-        .title { font-size: 0.9rem; color: #888; text-transform: uppercase; letter-spacing: 4px; margin-bottom: 30px; }
-
-        .links { display: flex; flex-direction: column; gap: 15px; }
-        .link-btn {
-            text-decoration: none; color: #fff; font-weight: bold; font-size: 0.9rem;
-            border: 1px solid #ff0000; padding: 15px; background: rgba(255, 0, 0, 0.05);
-            transition: all 0.3s ease; letter-spacing: 1px;
+        .name { 
+            font-family: 'Orbitron', sans-serif;
+            font-size: 2.5rem; 
+            color: #ff0000; 
+            letter-spacing: 5px; 
+            margin-bottom: 10px;
         }
 
-        .link-btn:hover { background: #ff0000; color: #000; box-shadow: 0 0 20px rgba(255, 0, 0, 0.6); }
+        .identity-code {
+            font-size: 0.8rem;
+            color: #555;
+            margin-bottom: 20px;
+        }
 
-        .footer { margin-top: 30px; font-size: 0.7rem; color: #444; letter-spacing: 2px; }
+        /* Uzun Paragraf Bölümü */
+        .bio-content {
+            line-height: 1.8;
+            font-size: 1.1rem;
+            text-align: justify;
+            border-left: 2px solid #ff0000;
+            padding-left: 20px;
+            margin-bottom: 40px;
+            color: #ccc;
+        }
+
+        .bio-content b { color: #ff0000; }
+
+        /* Linkler */
+        .section-title {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 1.2rem;
+            color: #ff0000;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            border-bottom: 1px solid #300;
+            padding-bottom: 10px;
+        }
+
+        .link-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 15px;
+        }
+
+        .link-item {
+            text-decoration: none;
+            color: #fff;
+            border: 1px solid #ff0000;
+            padding: 15px;
+            text-align: center;
+            background: rgba(255, 0, 0, 0.05);
+            transition: 0.4s;
+            font-weight: bold;
+        }
+
+        .link-item:hover {
+            background: #ff0000;
+            color: #000;
+            box-shadow: 0 0 25px rgba(255, 0, 0, 0.5);
+            transform: translateY(-3px);
+        }
+
+        /* Footer */
+        .system-footer {
+            margin-top: 50px;
+            text-align: center;
+            font-size: 0.7rem;
+            color: #444;
+            letter-spacing: 3px;
+        }
+
+        @media (max-width: 600px) {
+            .link-grid { grid-template-columns: 1fr; }
+            .name { font-size: 1.8rem; }
+        }
     </style>
 </head>
 <body>
 
     <canvas id="matrix"></canvas>
 
-    <div class="container">
-        <img src="FOTOĞRAF_LİNKİ_BURAYA" alt="ANKB7T" class="profile-img" onerror="this.style.display='none'">
-        
-        <div class="name">ANKB7T</div>
-        <div class="title">Cyber Operator / Digital Identity</div>
+    <div class="wrapper">
+        <div class="main-card">
+            <div class="profile-header">
+                <img src="https://via.placeholder.com/150" alt="ANKB7T" class="profile-img" onerror="this.style.display='none'">
+                <h1 class="name">ANKB7T</h1>
+                <div class="identity-code">SECURED DIGITAL IDENTITY // UID: 9998780248</div>
+            </div>
 
-        <div class="links">
-            <a href="https://t.me/c4ksiber" class="link-btn" target="_blank">C4K SIBER GRUP</a>
-            <a href="https://t.me/allesfurdie" class="link-btn" target="_blank">TELEGRAM (PERSONAL)</a>
-            <a href="https://wa.me/998998780248" class="link-btn" target="_blank">WHATSAPP</a>
-            <a href="https://instagram.com/hissedilme" class="link-btn" target="_blank">INSTAGRAM</a>
+            <div class="section-title">Hakkımda</div>
+            <div class="bio-content">
+                Dijital evrenin sessiz katmanlarında, sadece verilerin ve algoritmaların hüküm sürdüğü bir düzlemde varlığımı sürdürüyorum. <b>ANKB7T</b> kimliği altında, sanal dünyanın sunduğu sonsuz olasılıkları analiz ediyor ve dijital güvenliğin sınırlarını keşfediyorum. 
+                <br><br>
+                Benim için teknoloji, sadece kullanılan bir araç değil; bir dil, bir ifade biçimi ve keşfedilmeyi bekleyen devasa bir labirenttir. Bu platformda, hem bireysel projelerimi yönetiyor hem de <b>C4K SIBER</b> bünyesinde kolektif bir bilinçle hareket ediyorum. Gerçekliğin kısıtlamalarından uzak, kodların özgürlüğünde inşa edilen bu sanal hayatıma hoş geldiniz.
+            </div>
+
+            <div class="section-title">İletişim ve Bağlantılar</div>
+            <div class="link-grid">
+                <a href="https://t.me/c4ksiber" class="link-item" target="_blank">C4K SIBER GRUP</a>
+                <a href="https://t.me/allesfurdie" class="link-item" target="_blank">ŞAHSİ TELEGRAM</a>
+                <a href="https://wa.me/998998780248" class="link-item" target="_blank">WHATSAPP HESABI</a>
+                <a href="https://instagram.com/hissedilme" class="link-item" target="_blank">INSTAGRAM</a>
+            </div>
+
+            <div class="system-footer">
+                ESTABLISHED IN VIRTUAL DOMAIN // ALLES FUR DIE // 2026
+            </div>
         </div>
-
-        <div class="footer">ENCRYPTED CONNECTION ESTABLISHED // 2026</div>
     </div>
 
     <script>
         const canvas = document.getElementById('matrix');
         const ctx = canvas.getContext('2d');
-        canvas.height = window.innerHeight; canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+        canvas.width = window.innerWidth;
         const letters = "01";
         const fontSize = 16;
         const columns = canvas.width / fontSize;
         const drops = Array(Math.floor(columns)).fill(1);
 
         function draw() {
-            ctx.fillStyle = "rgba(5, 0, 0, 0.1)"; ctx.fillRect(0, 0, canvas.width, canvas.height);
+            ctx.fillStyle = "rgba(5, 0, 0, 0.1)";
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.font = fontSize + "px monospace";
             for (let i = 0; i < drops.length; i++) {
                 const text = letters[Math.floor(Math.random() * letters.length)];
-                ctx.fillStyle = Math.random() > 0.98 ? "#fff" : "#400";
+                ctx.fillStyle = Math.random() > 0.98 ? "#fff" : "#600";
                 ctx.fillText(text, i * fontSize, drops[i] * fontSize);
                 if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
                 drops[i]++;
             }
         }
         setInterval(draw, 50);
+
+        window.addEventListener('resize', () => {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+        });
     </script>
 </body>
 </html>
