--- a/index.html
+++ b/index.html
@@ -3,138 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ANKB7T // DIGITAL IDENTITY</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <title>ANKB7T // DIGITAL DOMAIN</title>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { 
-            background-color: #050000; 
-            font-family: 'Share Tech Mono', monospace; 
-            color: #ffffff; 
-            overflow-x: hidden;
-        }
+        body { background-color: #000; overflow: hidden; font-family: 'Share Tech Mono', monospace; }
 
-        /* Matrix Arka Plan */
+        /* Parlak Matrix Arka Plan */
         canvas {
-            display: block;
             position: fixed;
-            top: 0;
-            left: 0;
+            top: 0; left: 0;
             z-index: -1;
-            opacity: 0.4;
+            filter: brightness(1.5); /* Çince karakterleri parlattım */
         }
 
-        /* Ana Konteynır */
-        .wrapper {
-            width: 100%;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 50px 20px;
+        /* Ana Kart Tasarımı */
+        .terminal-card {
+            position: absolute;
+            top: 50%; left: 50%;
+            transform: translate(-50%, -50%);
+            width: 90%;
+            max-width: 650px;
+            background: rgba(0, 0, 0, 0.95);
+            border: 2px solid #ff0000;
+            box-shadow: 0 0 30px rgba(255, 0, 0, 0.7); /* Görseldeki yoğun kırmızı parlama */
+            padding: 40px;
+            color: #fff;
         }
 
-        .main-card {
-            width: 100%;
-            max-width: 800px;
-            background: rgba(15, 0, 0, 0.85);
-            border: 1px solid #ff0000;
-            box-shadow: 0 0 50px rgba(255, 0, 0, 0.15);
-            padding: 60px 40px;
-            backdrop-filter: blur(10px);
-        }
-
-        /* Profil Bölümü */
-        .profile-header {
-            text-align: center;
-            margin-bottom: 40px;
-        }
-
-        .profile-img {
-            width: 150px;
-            height: 150px;
+        /* Üst Başlık ve Profil */
+        .header-flex { display: flex; align-items: center; gap: 20px; margin-bottom: 25px; }
+        .pfp-circle {
+            width: 70px; height: 70px;
             border-radius: 50%;
-            border: 3px solid #ff0000;
-            margin-bottom: 20px;
-            box-shadow: 0 0 20px #ff0000;
-            object-fit: cover;
+            border: 2px solid #fff;
+            background: #222; /* Buraya kendi fotonu koyabilirsin */
         }
+        .name-tag h1 { color: #ff0000; font-size: 2rem; letter-spacing: 2px; line-height: 1; }
+        .name-tag p { color: #ccc; font-size: 1.1rem; letter-spacing: 1px; }
 
-        .name { 
-            font-family: 'Orbitron', sans-serif;
-            font-size: 2.5rem; 
-            color: #ff0000; 
-            letter-spacing: 5px; 
-            margin-bottom: 10px;
-        }
-
-        .identity-code {
-            font-size: 0.8rem;
-            color: #555;
-            margin-bottom: 20px;
-        }
-
-        /* Uzun Paragraf Bölümü */
-        .bio-content {
-            line-height: 1.8;
+        /* Bio Yazısı */
+        .bio-text {
+            border-top: 1px solid #333;
+            padding-top: 20px;
+            margin-bottom: 30px;
             font-size: 1.1rem;
-            text-align: justify;
-            border-left: 2px solid #ff0000;
-            padding-left: 20px;
-            margin-bottom: 40px;
-            color: #ccc;
+            line-height: 1.5;
+            color: #eee;
         }
 
-        .bio-content b { color: #ff0000; }
-
-        /* Linkler */
-        .section-title {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 1.2rem;
-            color: #ff0000;
-            margin-bottom: 20px;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            border-bottom: 1px solid #300;
-            padding-bottom: 10px;
-        }
-
-        .link-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 15px;
-        }
-
-        .link-item {
+        /* Linkler Bölümü */
+        .links-title { color: #ff0000; font-size: 1.2rem; margin-bottom: 15px; border-bottom: 1px solid #333; padding-bottom: 5px; }
+        .link-row {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 12px;
             text-decoration: none;
             color: #fff;
-            border: 1px solid #ff0000;
-            padding: 15px;
-            text-align: center;
-            background: rgba(255, 0, 0, 0.05);
-            transition: 0.4s;
-            font-weight: bold;
+            transition: 0.3s;
         }
+        .link-row:hover { background: rgba(255,0,0,0.1); }
 
-        .link-item:hover {
-            background: #ff0000;
-            color: #000;
-            box-shadow: 0 0 25px rgba(255, 0, 0, 0.5);
-            transform: translateY(-3px);
+        .btn {
+            background: rgba(255, 0, 0, 0.1);
+            border: 1px solid #ff0000;
+            color: #ff0000;
+            padding: 5px 15px;
+            font-weight: bold;
+            min-width: 110px;
+            text-align: center;
         }
+        .link-val { flex-grow: 1; margin-left: 15px; color: #ccc; font-size: 0.9rem; }
+        .target { color: #555; font-size: 0.8rem; }
 
         /* Footer */
-        .system-footer {
-            margin-top: 50px;
+        .footer-text {
             text-align: center;
-            font-size: 0.7rem;
-            color: #444;
-            letter-spacing: 3px;
-        }
-
-        @media (max-width: 600px) {
-            .link-grid { grid-template-columns: 1fr; }
-            .name { font-size: 1.8rem; }
+            margin-top: 30px;
+            color: #888;
+            font-size: 0.8rem;
+            letter-spacing: 2px;
         }
     </style>
 </head>
@@ -142,32 +91,49 @@
 
     <canvas id="matrix"></canvas>
 
-    <div class="wrapper">
-        <div class="main-card">
-            <div class="profile-header">
-                <img src="https://via.placeholder.com/150" alt="ANKB7T" class="profile-img" onerror="this.style.display='none'">
-                <h1 class="name">ANKB7T</h1>
-                <div class="identity-code">SECURED DIGITAL IDENTITY // UID: 9998780248</div>
+    <div class="terminal-card">
+        <div class="header-flex">
+            <div class="pfp-circle"></div>
+            <div class="name-tag">
+                <h1>ANKB7T</h1>
+                <p>DIGITAL DOMAIN</p>
             </div>
+        </div>
 
-            <div class="section-title">Hakkımda</div>
-            <div class="bio-content">
-                Dijital evrenin sessiz katmanlarında, sadece verilerin ve algoritmaların hüküm sürdüğü bir düzlemde varlığımı sürdürüyorum. <b>ANKB7T</b> kimliği altında, sanal dünyanın sunduğu sonsuz olasılıkları analiz ediyor ve dijital güvenliğin sınırlarını keşfediyorum. 
-                <br><br>
-                Benim için teknoloji, sadece kullanılan bir araç değil; bir dil, bir ifade biçimi ve keşfedilmeyi bekleyen devasa bir labirenttir. Bu platformda, hem bireysel projelerimi yönetiyor hem de <b>C4K SIBER</b> bünyesinde kolektif bir bilinçle hareket ediyorum. Gerçekliğin kısıtlamalarından uzak, kodların özgürlüğünde inşa edilen bu sanal hayatıma hoş geldiniz.
-            </div>
+        <div class="bio-text">
+            Sanal dünyanın mimarı.<br>
+            Kodların ötesini gerçekliğe dönüştüren bir vizyon.<br>
+            Benimle bağlantı kurun.
+        </div>
 
-            <div class="section-title">İletişim ve Bağlantılar</div>
-            <div class="link-grid">
-                <a href="https://t.me/c4ksiber" class="link-item" target="_blank">C4K SIBER GRUP</a>
-                <a href="https://t.me/allesfurdie" class="link-item" target="_blank">ŞAHSİ TELEGRAM</a>
-                <a href="https://wa.me/998998780248" class="link-item" target="_blank">WHATSAPP HESABI</a>
-                <a href="https://instagram.com/hissedilme" class="link-item" target="_blank">INSTAGRAM</a>
-            </div>
+        <div class="links-title">Links</div>
+        
+        <a href="https://t.me/c4ksiber" class="link-row" target="_blank">
+            <span class="btn">C4K SİBER</span>
+            <span class="link-val">t.me/c4ksiber GRUP</span>
+            <span class="target">target = BLnK</span>
+        </a>
 
-            <div class="system-footer">
-                ESTABLISHED IN VIRTUAL DOMAIN // ALLES FUR DIE // 2026
-            </div>
+        <a href="https://t.me/allesfurdie" class="link-row" target="_blank">
+            <span class="btn">TELEGRAM</span>
+            <span class="link-val">PERSONAL - t.me/allesfurdie</span>
+            <span class="target">target = BLnK</span>
+        </a>
+
+        <a href="https://wa.me/998998780248" class="link-row" target="_blank">
+            <span class="btn">WHATSAPP</span>
+            <span class="link-val">+999 987 80 248</span>
+            <span class="target">target = BLnK</span>
+        </a>
+
+        <a href="https://instagram.com/hissedilme" class="link-row" target="_blank">
+            <span class="btn">INSTAGRAM</span>
+            <span class="link-val">@hissedilme</span>
+            <span class="target">target = BLnK</span>
+        </a>
+
+        <div class="footer-text">
+            ENCRYPTED // ALLES FÜR DIE // 2026
         </div>
     </div>
 
@@ -176,29 +142,29 @@
         const ctx = canvas.getContext('2d');
         canvas.height = window.innerHeight;
         canvas.width = window.innerWidth;
-        const letters = "01";
+
+        const characters = "日ハミヒー0123456789X-Y-Z-@#$";
         const fontSize = 16;
         const columns = canvas.width / fontSize;
         const drops = Array(Math.floor(columns)).fill(1);
 
         function draw() {
-            ctx.fillStyle = "rgba(5, 0, 0, 0.1)";
+            ctx.fillStyle = "rgba(0, 0, 0, 0.1)";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.font = fontSize + "px monospace";
+
             for (let i = 0; i < drops.length; i++) {
-                const text = letters[Math.floor(Math.random() * letters.length)];
-                ctx.fillStyle = Math.random() > 0.98 ? "#fff" : "#600";
+                const text = characters[Math.floor(Math.random() * characters.length)];
+                // Parlaklık için ara ara beyaz ve parlak kırmızı karakterler atar
+                const r = Math.random();
+                ctx.fillStyle = r > 0.95 ? "#fff" : (r > 0.7 ? "#ff0000" : "#300"); 
+                
                 ctx.fillText(text, i * fontSize, drops[i] * fontSize);
                 if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
                 drops[i]++;
             }
         }
-        setInterval(draw, 50);
-
-        window.addEventListener('resize', () => {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-        });
+        setInterval(draw, 40);
     </script>
 </body>
 </html>
