--- a/index.html
+++ b/index.html
@@ -2,199 +2,153 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>ANKB7T // INTRUSION</title>
+<title>ANKB7T // UNKNOWN</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=JetBrains+Mono:wght@300;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=JetBrains+Mono:wght@300;500&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
+html,body{width:100%;height:100%}
 body{
+  font-family:'JetBrains Mono', monospace;
   background:black;
   color:#e0e0e0;
-  font-family:'JetBrains Mono', monospace;
   overflow:hidden;
 }
 
-/* MATRIX CAOS */
-canvas{
+/* BACKGROUND IMAGE */
+.bg{
   position:fixed;
-  top:0;left:0;
-  width:100%;height:100%;
-  z-index:-1;
-  opacity:.08;
-}
-
-/* FILM INTRO */
-#intro{
-  position:absolute;
   inset:0;
-  background:black;
+  background:url('https://i.pinimg.com/236x/f1/e6/17/f1e617d910d42be6e9c6eed0e3f359e1.jpg') center/cover no-repeat;
+  filter:blur(8px) brightness(0.35);
+  transform:scale(1.1);
+  animation:slowMove 20s infinite alternate ease-in-out;
+  z-index:-3;
+}
+@keyframes slowMove{
+  from{transform:scale(1.1) translateY(0)}
+  to{transform:scale(1.15) translateY(-20px)}
+}
+
+/* DARK OVERLAY */
+.overlay{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.6);
+  z-index:-2;
+}
+
+/* NOISE */
+.noise{
+  position:fixed;
+  inset:0;
+  background:url('https://grainy-gradients.vercel.app/noise.svg');
+  opacity:0.08;
+  z-index:-1;
+}
+
+/* MAIN */
+.center{
+  height:100%;
   display:flex;
-  flex-direction:column;
-  justify-content:center;
   align-items:center;
+  justify-content:center;
+  text-align:center;
+  padding:20px;
+}
+
+h1{
   font-family:'Orbitron';
-  color:red;
-  font-size:2rem;
-  text-align:center;
-  animation:fade 5s forwards;
-}
-@keyframes fade{
-  0%{opacity:1}
-  80%{opacity:1}
-  100%{opacity:0;pointer-events:none}
+  color:#ff1a1a;
+  letter-spacing:4px;
+  font-size:2.5rem;
 }
 
-/* MAIN CARD */
-.card{
-  width:420px;
-  margin:60px auto;
-  border:1px solid #600;
-  padding:30px;
-  box-shadow:0 0 60px #900;
-  position:relative;
+.sub{
+  margin-top:10px;
+  font-size:.9rem;
+  color:#aaa;
+  letter-spacing:2px;
 }
 
-/* PROFILE IMAGE SNIPPET */
-.hacker-img{
-  width:100%;
-  border:2px solid red;
-  filter:contrast(1.2);
-  animation:glitch 1.5s infinite alternate;
-}
-@keyframes glitch{
-  0%{transform:translate(0px)}
-  25%{transform:translate(4px,-2px) }
-  50%{transform:translate(-3px,3px) }
-  75%{transform:translate(3px,-1px)}
-  100%{transform:translate(-2px,2px)}
-}
-
-/* TEXT */
-h1{font-family:'Orbitron';color:red;font-size:1.8rem;text-align:center;margin:12px 0}
-.manifesto{margin:20px 0;color:#aaa;font-size:1rem;line-height:1.4}
-
-/* LINKS */
-.links div{
-  margin:12px 0;
-  padding:12px;
-  border:1px solid #400;
-  transition:.3s;
-  cursor:pointer;
-}
-.links div:hover{
-  background:red;color:black;
-}
-.links span{
-  float:right;font-size:.7rem;opacity:.7
-}
-
-/* TERMINAL */
-.terminal{
+.quote{
   margin-top:25px;
-  border-top:1px solid #400;
-  padding-top:15px;
-  font-size:.85rem;
-  color:#ccc;
+  font-size:1rem;
+  color:#888;
+  line-height:1.6;
+  letter-spacing:1px;
 }
-.cmd{color:#f33}
 
-/* FOOTER */
-footer{
-  text-align:center;
-  margin-top:15px;
+/* HUD TEXT */
+.hud{
+  position:fixed;
+  bottom:20px;
+  left:20px;
   font-size:.7rem;
   color:#555;
-  cursor:pointer;
+}
+.hud span{color:#ff1a1a}
+
+/* LINKS */
+.links{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  text-align:right;
+}
+.links a{
+  display:block;
+  color:#777;
+  text-decoration:none;
+  font-size:.75rem;
+  margin-top:6px;
+}
+.links a:hover{color:#ff1a1a}
+
+/* GLITCH */
+.glitch{
+  animation:glitch 2.5s infinite;
+}
+@keyframes glitch{
+  0%{text-shadow:none}
+  20%{text-shadow:2px 0 red}
+  40%{text-shadow:-2px 0 #ff1a1a}
+  60%{text-shadow:1px 0 red}
+  100%{text-shadow:none}
 }
 </style>
 </head>
 
 <body>
 
-<div id="intro">
-  SECURITY BREACH DETECTED<br><br>
-  IDENTITY CONFIRMED<br><br>
-  WELCOME BACK, ANKB7T
+<div class="bg"></div>
+<div class="overlay"></div>
+<div class="noise"></div>
+
+<div class="center">
+  <div>
+    <h1 class="glitch">ANKB7T</h1>
+    <div class="sub">IDENTITY: UNKNOWN</div>
+
+    <div class="quote">
+      Görünmeyen şeyleri kontrol edenler,<br>
+      görünen dünyayı yönetir.
+    </div>
+  </div>
 </div>
 
-<canvas id="matrix"></canvas>
-
-<div class="card">
-
-  <img class="hacker-img" src="https://i.pinimg.com/236x/f1/e6/17/f1e617d910d42be6e9c6eed0e3f359e1.jpg">
-
-  <h1>ANKB7T</h1>
-
-  <p class="manifesto">
-    Görünmeyen şeyleri kontrol edenler,<br>
-    görünen dünyayı yönetir.
-  </p>
-
-  <div class="links">
-    <div onclick="openLink('https://t.me/c4ksiber')">C4K SİBER <span>> CONNECTING</span></div>
-    <div onclick="openLink('https://t.me/allesfurdie')">TELEGRAM <span>> CONNECTING</span></div>
-    <div onclick="openLink('https://wa.me/998998780248')">WHATSAPP <span>> CONNECTING</span></div>
-    <div onclick="openLink('https://instagram.com/hissedilme')">INSTAGRAM <span>> CONNECTING</span></div>
-  </div>
-
-  <div class="terminal">
-    <div><span class="cmd">></span> whoami</div>
-    <div>ANKB7T</div><br>
-    <div><span class="cmd">></span> mission</div>
-    <div>Digital dominance</div><br>
-    <div><span class="cmd">></span> status</div>
-    <div>Always online</div>
-  </div>
-
-  <footer id="footer">ENCRYPTED // ALLES FÜR DIE // 2026</footer>
+<div class="hud">
+  REC ● CAM_07<br>
+  SIGNAL: <span>UNSTABLE</span><br>
+  ACCESS: <span>LEVEL 7</span>
 </div>
 
-<script>
-/* MATRIX EFFECT */
-const c=document.getElementById("matrix");
-const ctx=c.getContext("2d");
-c.width=innerWidth;c.height=innerHeight;
-const letters="ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
-const fontSize=14;
-const cols=c.width/fontSize;
-const drops=Array.from({length:cols}).fill(1);
-
-function draw(){
- ctx.fillStyle="rgba(0,0,0,.07)";
- ctx.fillRect(0,0,c.width,c.height);
- ctx.fillStyle="#900";
- ctx.font=fontSize+"px monospace";
- drops.forEach((y,i)=>{
-   const text=letters[Math.floor(Math.random()*letters.length)];
-   ctx.fillText(text,i*fontSize,y*fontSize);
-   if(y*fontSize>c.height && Math.random()>0.975) drops[i]=0;
-   drops[i]++;
- });
-}
-setInterval(draw,40);
-
-/* OPEN LINKS */
-function openLink(url){
-  setTimeout(()=>window.open(url,"_blank"),600);
-}
-
-/* SECRET KEY */
-document.addEventListener("keydown",e=>{
- if(e.ctrlKey && e.shiftKey && e.key==="X"){
-   alert("ENCRYPTED MODE ENABLED");
- }
-});
-
-/* FOOTER SECRET */
-let click=0;
-footer.onclick=function(){
- click++;
- if(click===5){
-   alert("HIDDEN ACCESS GRANTED");
- }
-}
-</script>
+<div class="links">
+  <a href="https://t.me/c4ksiber" target="_blank">t.me/c4ksiber</a>
+  <a href="https://t.me/allesfurdie" target="_blank">@allesfurdie</a>
+  <a href="https://instagram.com/hissedilme" target="_blank">@hissedilme</a>
+</div>
 
 </body>
 </html>
