--- a/index.html
+++ b/index.html
@@ -10,35 +10,35 @@
 *{margin:0;padding:0;box-sizing:border-box}
 
 body{
-  background:#050505;
-  color:#e5e5e5;
+  background:black;
+  color:#00ff9c;
   font-family:'Share Tech Mono', monospace;
+  height:100vh;
+  overflow:hidden;
+}
+
+/* MATRIX ARKA PLAN */
+canvas{
+  position:fixed;
+  top:0;left:0;
+  width:100%;height:100%;
+  z-index:-1;
+}
+
+.container{
   height:100vh;
   display:flex;
   align-items:center;
   justify-content:center;
-  overflow:hidden;
-}
-
-/* ARKA PLAN GLOW */
-body::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:
-    radial-gradient(circle at top, rgba(255,0,0,0.08), transparent 60%),
-    radial-gradient(circle at bottom, rgba(255,0,0,0.05), transparent 70%);
-  pointer-events:none;
 }
 
 .card{
-  position:relative;
-  border:1px solid rgba(255,0,0,0.4);
-  padding:40px 35px;
+  background:rgba(0,0,0,0.75);
+  border:1px solid #00ff9c;
+  box-shadow:0 0 40px rgba(0,255,156,0.25);
+  padding:40px;
   width:420px;
   text-align:center;
-  background:rgba(0,0,0,0.75);
-  box-shadow:0 0 40px rgba(255,0,0,0.25);
 }
 
 /* FOTO */
@@ -46,66 +46,116 @@ body::before{
   width:140px;
   height:140px;
   border-radius:50%;
+  border:2px solid #00ff9c;
   object-fit:cover;
-  border:3px solid #ff1a1a;
-  margin-bottom:22px;
+  margin-bottom:20px;
 }
 
 /* İSİM */
 h1{
-  color:#ff1a1a;
-  letter-spacing:3px;
-  font-size:2.4rem;
-  font-weight:700;
+  letter-spacing:4px;
+  font-size:2.3rem;
+  margin-bottom:10px;
 }
 
-/* ALT YAZI */
+/* SLOGAN */
 .tagline{
-  margin-top:14px;
-  font-size:1rem;
+  font-size:0.95rem;
   line-height:1.6;
-  color:#cfcfcf;
-  letter-spacing:1px;
+  color:#b6ffe6;
 }
 
-/* ÇİZGİ */
-.line{
-  width:60px;
-  height:1px;
-  background:#ff1a1a;
-  margin:20px auto;
+/* LINKLER */
+.links{
+  margin-top:30px;
+}
+
+.links a{
+  display:block;
+  text-decoration:none;
+  color:#00ff9c;
+  border:1px solid #00ff9c;
+  padding:12px;
+  margin:10px 0;
+  transition:0.25s;
+}
+
+.links a:hover{
+  background:#00ff9c;
+  color:black;
 }
 
 /* FOOTER */
 .footer{
-  font-size:0.75rem;
-  color:#777;
-  margin-top:18px;
+  margin-top:25px;
+  font-size:0.7rem;
+  color:#4dffcc;
 }
 </style>
 </head>
 
 <body>
 
-<div class="card">
+<canvas id="matrix"></canvas>
 
-  <!-- SENİN FOTOĞRAF -->
-  <img class="avatar" src="https://i.pinimg.com/236x/f1/e6/17/f1e617d910d42be6e9c6eed0e3f359e1.jpg" alt="ANKB7T">
+<div class="container">
+  <div class="card">
 
-  <h1>ANKB7T</h1>
+    <img class="avatar" src="https://i.pinimg.com/236x/f1/e6/17/f1e617d910d42be6e9c6eed0e3f359e1.jpg">
 
-  <div class="line"></div>
+    <h1>ANKB7T</h1>
 
-  <div class="tagline">
-    Görünmeyen şeyleri kontrol edenler,<br>
-    görünen dünyayı yönetir.
+    <div class="tagline">
+      Görünmeyen sistemleri kontrol edenler,<br>
+      görünen dünyayı yönetir.
+    </div>
+
+    <div class="links">
+      <a href="https://t.me/allesfurdie" target="_blank">TELEGRAM — @allesfurdie</a>
+      <a href="https://instagram.com/hissedilme" target="_blank">INSTAGRAM — @hissedilme</a>
+    </div>
+
+    <div class="footer">
+      ACCESS GRANTED • DIGITAL IDENTITY • 2026
+    </div>
+
   </div>
-
-  <div class="footer">
-    /* Simulated Digital Identity • 2026 */
-  </div>
-
 </div>
+
+<script>
+const canvas = document.getElementById("matrix");
+const ctx = canvas.getContext("2d");
+
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+
+const letters = "01";
+const fontSize = 14;
+const columns = canvas.width / fontSize;
+const drops = [];
+
+for(let i=0;i<columns;i++) drops[i]=1;
+
+function draw(){
+  ctx.fillStyle="rgba(0,0,0,0.08)";
+  ctx.fillRect(0,0,canvas.width,canvas.height);
+
+  ctx.fillStyle="#00ff9c";
+  ctx.font=fontSize+"px monospace";
+
+  for(let i=0;i<drops.length;i++){
+    const text = letters[Math.floor(Math.random()*letters.length)];
+    ctx.fillText(text,i*fontSize,drops[i]*fontSize);
+
+    if(drops[i]*fontSize>canvas.height && Math.random()>0.975)
+      drops[i]=0;
+
+    drops[i]++;
+  }
+}
+
+setInterval(draw,35);
+</script>
 
 </body>
 </html>
