--- a/index.html
+++ b/index.html
@@ -2,171 +2,283 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>ANKB7T</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ANKB7T // DIGITAL CORE</title>
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
+*{
+margin:0;
+padding:0;
+box-sizing:border-box;
+font-family:monospace;
+scroll-behavior:smooth;
+}
 
 body{
-  background:black;
-  color:#ff1a1a;
-  font-family:'Share Tech Mono', monospace;
-  height:100vh;
-  overflow:hidden;
+background:#000;
+color:#ff0000;
+overflow-x:hidden;
 }
 
-/* MATRIX */
+/* LOADING SCREEN */
+#loader{
+position:fixed;
+width:100%;
+height:100%;
+background:#000;
+display:flex;
+justify-content:center;
+align-items:center;
+flex-direction:column;
+z-index:9999;
+}
+
+#loader h1{
+font-size:28px;
+animation:pulse 1s infinite alternate;
+}
+
+@keyframes pulse{
+from{opacity:0.3;}
+to{opacity:1;}
+}
+
+/* MATRIX BACKGROUND */
 canvas{
-  position:fixed;
-  inset:0;
-  z-index:-1;
+position:fixed;
+top:0;
+left:0;
+z-index:-1;
 }
 
-.container{
-  height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+/* HEADER */
+header{
+padding:100px 20px;
+text-align:center;
+border-bottom:1px solid #ff0000;
+}
+
+header h1{
+font-size:40px;
+letter-spacing:4px;
+text-shadow:0 0 15px red;
+}
+
+header p{
+margin-top:10px;
+color:#888;
+}
+
+/* SECTION */
+section{
+padding:80px 20px;
+max-width:1000px;
+margin:auto;
+}
+
+/* PROFILE */
+.profile{
+display:flex;
+flex-wrap:wrap;
+align-items:center;
+gap:30px;
+}
+
+.profile img{
+width:150px;
+height:150px;
+border-radius:50%;
+border:3px solid red;
+box-shadow:0 0 20px red;
+}
+
+.profile-info{
+flex:1;
+}
+
+/* MODULE CARDS */
+.modules{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+gap:20px;
+margin-top:40px;
 }
 
 .card{
-  background:rgba(0,0,0,0.8);
-  border:1px solid #ff1a1a;
-  box-shadow:0 0 45px rgba(255,0,0,0.35);
-  padding:40px;
-  width:420px;
-  text-align:center;
+border:1px solid red;
+padding:20px;
+transition:0.3s;
+background:rgba(0,0,0,0.6);
 }
 
-/* FOTO */
-.avatar{
-  width:140px;
-  height:140px;
-  border-radius:50%;
-  border:2px solid #ff1a1a;
-  object-fit:cover;
-  margin-bottom:20px;
+.card:hover{
+box-shadow:0 0 25px red;
+transform:translateY(-5px);
 }
 
-/* İSİM */
-h1{
-  letter-spacing:4px;
-  font-size:2.4rem;
+/* TERMINAL */
+.terminal{
+background:#111;
+padding:20px;
+border:1px solid red;
+min-height:200px;
 }
 
-/* SLOGAN */
-.tagline{
-  margin-top:12px;
-  font-size:0.95rem;
-  line-height:1.6;
-  color:#ffb3b3;
+.terminal p{
+margin:5px 0;
 }
 
-/* LINKLER */
-.links{
-  margin-top:30px;
+/* DATA STREAM */
+.datastream{
+margin-top:30px;
+color:#555;
+font-size:14px;
+height:150px;
+overflow:hidden;
 }
 
-.links a{
-  display:block;
-  text-decoration:none;
-  color:#ff1a1a;
-  border:1px solid #ff1a1a;
-  padding:12px;
-  margin:10px 0;
-  transition:.25s;
+/* FOOTER */
+footer{
+text-align:center;
+padding:40px;
+border-top:1px solid red;
+color:#666;
 }
 
-.links a:hover{
-  background:#ff1a1a;
-  color:black;
+/* SCROLLBAR */
+::-webkit-scrollbar{
+width:8px;
 }
-
-/* ALT */
-.footer{
-  margin-top:25px;
-  font-size:0.75rem;
-  color:#ff8080;
-  letter-spacing:2px;
-}
-
-.time{
-  margin-top:8px;
-  font-size:0.75rem;
-  color:#ff4d4d;
+::-webkit-scrollbar-thumb{
+background:red;
 }
 </style>
 </head>
 
 <body>
 
-<canvas id="matrix"></canvas>
-
-<div class="container">
-  <div class="card">
-
-    <img class="avatar"
-    src="https://i.pinimg.com/236x/f1/e6/17/f1e617d910d42be6e9c6eed0e3f359e1.jpg">
-
-    <h1>ANKB7T</h1>
-
-    <div class="tagline">
-      Görünmeyen sistemleri kontrol edenler,<br>
-      görünen dünyayı yönetir.
-    </div>
-
-    <div class="links">
-      <a href="https://t.me/allesfurdie" target="_blank">TELEGRAM — @allesfurdie</a>
-      <a href="https://instagram.com/hissedilme" target="_blank">INSTAGRAM — @hissedilme</a>
-    </div>
-
-    <div class="footer">
-      ALLES FÜR DIE • 2026
-    </div>
-
-    <div class="time" id="time"></div>
-
-  </div>
+<div id="loader">
+<h1>ACCESSING DIGITAL CORE...</h1>
 </div>
 
-<script>
-// MATRIX
-const canvas = document.getElementById("matrix");
-const ctx = canvas.getContext("2d");
-canvas.width = innerWidth;
-canvas.height = innerHeight;
+<canvas id="matrix"></canvas>
 
-const letters = "01";
-const fontSize = 14;
-const columns = canvas.width / fontSize;
-const drops = Array(Math.floor(columns)).fill(1);
+<header>
+<h1>ANKB7T // DIGITAL CORE</h1>
+<p>ACCESS LEVEL: ROOT // STATUS: ONLINE</p>
+</header>
+
+<section>
+<div class="profile">
+<img src="https://i.pinimg.com/236x/f1/e6/17/f1e617d910d42be6e9c6eed0e3f359e1.jpg">
+<div class="profile-info">
+<p>Operator: ANKB7T</p>
+<p>Domain: Digital Warfare</p>
+<p>Encryption: AES-256</p>
+<p>Status: Untraceable</p>
+</div>
+</div>
+
+<div class="modules">
+<div class="card">[01] NETWORK GRID</div>
+<div class="card">[02] ENCRYPTION VAULT</div>
+<div class="card">[03] ACCESS TERMINAL</div>
+<div class="card">[04] SIGNAL INTELLIGENCE</div>
+<div class="card">[05] DARK ARCHIVE</div>
+<div class="card">[06] COMMAND CONSOLE</div>
+</div>
+</section>
+
+<section>
+<h2>LIVE TERMINAL</h2>
+<div class="terminal" id="terminal"></div>
+
+<div class="datastream" id="datastream"></div>
+</section>
+
+<footer>
+SYSTEM LOCKED // ENCRYPTED // 2026<br>
+PROPERTY OF ANKB7T
+</footer>
+
+<script>
+
+/* LOADER */
+window.onload = function(){
+setTimeout(()=>{
+document.getElementById("loader").style.display="none";
+},2000);
+};
+
+/* TERMINAL TYPING */
+const terminal = document.getElementById("terminal");
+const lines = [
+"> establishing secure connection...",
+"> bypassing firewall...",
+"> access granted.",
+"> welcome operator."
+];
+
+let i=0;
+function typeLine(){
+if(i<lines.length){
+let p=document.createElement("p");
+p.textContent=lines[i];
+terminal.appendChild(p);
+i++;
+setTimeout(typeLine,800);
+}
+}
+setTimeout(typeLine,2000);
+
+/* DATA STREAM */
+const stream=document.getElementById("datastream");
+setInterval(()=>{
+let p=document.createElement("p");
+p.textContent="Signal intercepted // IP: "+Math.floor(Math.random()*255)+"."+Math.floor(Math.random()*255)+"."+Math.floor(Math.random()*255)+"."+Math.floor(Math.random()*255);
+stream.appendChild(p);
+if(stream.children.length>10){
+stream.removeChild(stream.firstChild);
+}
+},1000);
+
+/* MATRIX */
+const canvas=document.getElementById("matrix");
+const ctx=canvas.getContext("2d");
+
+canvas.height=window.innerHeight;
+canvas.width=window.innerWidth;
+
+let letters="01";
+letters=letters.split("");
+
+let fontSize=14;
+let columns=canvas.width/fontSize;
+
+let drops=[];
+for(let x=0;x<columns;x++)
+drops[x]=1;
 
 function draw(){
-  ctx.fillStyle="rgba(0,0,0,0.08)";
-  ctx.fillRect(0,0,canvas.width,canvas.height);
-  ctx.fillStyle="#ff1a1a";
-  ctx.font=fontSize+"px monospace";
+ctx.fillStyle="rgba(0,0,0,0.05)";
+ctx.fillRect(0,0,canvas.width,canvas.height);
 
-  drops.forEach((y,i)=>{
-    const text = letters[Math.floor(Math.random()*2)];
-    ctx.fillText(text,i*fontSize,y*fontSize);
-    if(y*fontSize>canvas.height && Math.random()>0.975) drops[i]=0;
-    drops[i]++;
-  });
-}
-setInterval(draw,35);
+ctx.fillStyle="#ff0000";
+ctx.font=fontSize+"px monospace";
 
-// SAAT & TARİH
-function updateTime(){
-  const now = new Date();
-  document.getElementById("time").innerText =
-    now.toLocaleDateString("tr-TR") + " — " +
-    now.toLocaleTimeString("tr-TR");
+for(let i=0;i<drops.length;i++){
+let text=letters[Math.floor(Math.random()*letters.length)];
+ctx.fillText(text,i*fontSize,drops[i]*fontSize);
+
+if(drops[i]*fontSize>canvas.height && Math.random()>0.975)
+drops[i]=0;
+
+drops[i]++;
 }
-setInterval(updateTime,1000);
-updateTime();
+}
+
+setInterval(draw,33);
+
 </script>
 
 </body>
