--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ANKB7T SYSTEM</title>
+<title>ANKB7T CORE</title>
 
 <style>
 *{
@@ -14,8 +14,8 @@
 }
 
 body{
-    background:black;
-    color:red;
+    background:#000;
+    color:#ff0000;
     overflow-x:hidden;
 }
 
@@ -27,39 +27,58 @@ canvas{
     z-index:-1;
 }
 
-/* SECTION */
-.section{
-    padding:100px 8%;
+/* MAIN WRAPPER */
+.wrapper{
+    padding:60px 8%;
 }
 
-.section h1{
-    font-size:28px;
-    margin-bottom:50px;
+/* ID CARD */
+.id-card{
+    border:1px solid #ff0000;
+    padding:40px;
+    margin-bottom:80px;
+    backdrop-filter: blur(6px);
+    background:rgba(0,0,0,0.6);
+    box-shadow:0 0 20px rgba(255,0,0,0.3);
+}
+
+.id-title{
+    font-size:22px;
+    margin-bottom:20px;
     letter-spacing:2px;
 }
 
-/* GRID */
-.grid{
+.id-info p{
+    margin:8px 0;
+}
+
+/* LIVE CLOCK */
+.clock{
+    margin-top:15px;
+    font-size:14px;
+    opacity:0.8;
+}
+
+/* MODULE GRID */
+.modules{
     display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
+    grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
     gap:40px;
 }
 
-/* CARD */
-.card{
+.module{
     border:1px solid red;
-    padding:40px;
+    padding:35px;
     text-decoration:none;
     color:red;
     transition:0.3s;
-    position:relative;
-    backdrop-filter: blur(4px);
+    background:rgba(0,0,0,0.6);
 }
 
-.card:hover{
+.module:hover{
     background:red;
     color:black;
-    box-shadow:0 0 20px red;
+    box-shadow:0 0 25px red;
     transform:scale(1.05);
 }
 
@@ -67,9 +86,20 @@ canvas{
 .terminal{
     margin-top:80px;
     border:1px solid red;
-    padding:30px;
+    padding:25px;
     font-size:14px;
     line-height:22px;
+    background:rgba(0,0,0,0.6);
+}
+
+.blink{
+    animation:blink 1s infinite;
+}
+
+@keyframes blink{
+    0%{opacity:0}
+    50%{opacity:1}
+    100%{opacity:0}
 }
 </style>
 </head>
@@ -77,30 +107,41 @@ canvas{
 
 <canvas id="matrix"></canvas>
 
-<div class="section">
-    <h1>SYSTEM MODULES</h1>
+<div class="wrapper">
 
-    <div class="grid">
+    <div class="id-card">
+        <div class="id-title">[ DIGITAL IDENTITY CARD ]</div>
+        <div class="id-info">
+            <p>ID: ANKB7T</p>
+            <p>ROLE: SYSTEM OPERATOR</p>
+            <p>ACCESS: ROOT</p>
+            <p>STATUS: ONLINE</p>
+            <p>LOCATION: TURKEY</p>
+        </div>
+        <div class="clock" id="clock"></div>
+    </div>
 
-        <a href="https://t.me/allesfurdie" class="card">[01] NETWORK GRID</a>
-        <a href="https://instagram.com/hissedilme" class="card">[02] ENCRYPTION VAULT</a>
-        <a href="#" class="card">[03] ACCESS TERMINAL</a>
-        <a href="#" class="card">[04] SIGNAL INTELLIGENCE</a>
-        <a href="#" class="card">[05] DARK ARCHIVE</a>
-        <a href="#" class="card">[06] COMMAND CONSOLE</a>
-
+    <div class="modules">
+        <a href="https://t.me/allesfurdie" class="module">[01] TELEGRAM CHANNEL</a>
+        <a href="https://instagram.com/hissedilme" class="module">[02] INSTAGRAM PROFILE</a>
+        <a href="#" class="module">[03] DARK ARCHIVE</a>
+        <a href="#" class="module">[04] NETWORK GRID</a>
+        <a href="#" class="module">[05] COMMAND CONSOLE</a>
+        <a href="#" class="module">[06] ACCESS TERMINAL</a>
     </div>
 
     <div class="terminal">
         <p>> initializing core...</p>
         <p>> scanning network...</p>
         <p>> intrusion detection active...</p>
-        <p>> access granted.</p>
+        <p>> firewall bypassed...</p>
+        <p>> root access granted<span class="blink">_</span></p>
     </div>
 
 </div>
 
 <script>
+/* MATRIX */
 const canvas = document.getElementById("matrix");
 const ctx = canvas.getContext("2d");
 
@@ -110,30 +151,39 @@ canvas.width = window.innerWidth;
 const letters = "01ABCDEFGHIJKLMNOPQRSTUVWXYZ";
 const fontSize = 14;
 const columns = canvas.width / fontSize;
-
 const drops = [];
-for(let x = 0; x < columns; x++)
+
+for(let x=0; x<columns; x++)
     drops[x] = 1;
 
 function draw(){
-    ctx.fillStyle = "rgba(0,0,0,0.05)";
+    ctx.fillStyle="rgba(0,0,0,0.05)";
     ctx.fillRect(0,0,canvas.width,canvas.height);
 
-    ctx.fillStyle = "red";
-    ctx.font = fontSize + "px monospace";
+    ctx.fillStyle="#ff0000";
+    ctx.font=fontSize+"px monospace";
 
     for(let i=0; i<drops.length; i++){
         const text = letters[Math.floor(Math.random()*letters.length)];
         ctx.fillText(text, i*fontSize, drops[i]*fontSize);
 
-        if(drops[i]*fontSize > canvas.height && Math.random() > 0.975)
-            drops[i] = 0;
+        if(drops[i]*fontSize>canvas.height && Math.random()>0.975)
+            drops[i]=0;
 
         drops[i]++;
     }
 }
 
-setInterval(draw, 35);
+setInterval(draw,35);
+
+/* CLOCK */
+function updateClock(){
+    const now = new Date();
+    document.getElementById("clock").innerHTML =
+        "SYSTEM TIME: " + now.toLocaleString();
+}
+setInterval(updateClock,1000);
+updateClock();
 </script>
 
 </body>
