--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
         <div class="card-header">[ DIGITAL IDENTITY CARD ]</div>
         
         <div class="info-section">
-            <div class="info-row"><span class="label">ID:</span> ANKB7T</div>
-            <div class="info-row"><span class="label">ROLE:</span> SYSTEM OPERATOR</div>
-            <div class="info-row"><span class="label">ACCESS:</span> ROOT</div>
-            <div class="info-row"><span class="label">STATUS:</span> ONLINE</div>
+            <div class="info-row"><span class="label">ROLE:</span> PHANTOM OPERATOR</div>
+            <div class="info-row"><span class="label">ACCESS:</span> SYSTEM OVERRIDE</div>
+            <div class="info-row"><span class="label">STATUS:</span> UNDETECTED</div>
+
         </div>
 
         <div class="button-grid">
